Additional cleanup and string formatting